# cpp_template

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  vcpkg.json
apps/app/: CMakeLists.txt  app.cpp
docs/: CMakeLists.txt
include/lib/: lib.hpp
src/lib/: CMakeLists.txt  lib.cpp
tests/lib/: CMakeLists.txt  testlib.cpp
